[gd_scene load_steps=3 format=2]

[ext_resource path="res://Player/LightningStrike.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 300.0

[node name="LightningStrike" type="Node2D"]
script = ExtResource( 1 )

[node name="StrikeZoneLiveTime" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="StrikeZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StrikeZone"]
shape = SubResource( 1 )
[connection signal="timeout" from="StrikeZoneLiveTime" to="." method="_on_StrikeZoneLiveTime_timeout"]
[connection signal="body_entered" from="StrikeZone" to="." method="_on_StrikeZone_body_entered"]
[connection signal="body_exited" from="StrikeZone" to="." method="_on_StrikeZone_body_exited"]
